# Sparky-Cancer-Research

tumor-digital-twin/: .gitignore  CMakeLists.txt  PROTO_SETUP.md  README.md  generate_proto.bat  verify_proto.py
tumor-digital-twin/frontend/: .gitignore  README.md  SETUP_COMPLETE.md  build.gradle.kts  gradle.properties  settings.gradle.kts  verify-setup.bat
tumor-digital-twin/frontend/src/main/kotlin/com/tumordtwin/: Main.kt
tumor-digital-twin/frontend/src/main/resources/: logback.xml
tumor-digital-twin/frontend/src/test/kotlin/com/tumordtwin/: MainTest.kt
tumor-digital-twin/include/: README.md  grpc_server.h
tumor-digital-twin/proto/: README.md  common.proto  patient_data.proto  service.proto  simulation.proto
tumor-digital-twin/src/: CMakeLists.txt  grpc_server.cpp  main.cpp
tumor-digital-twin/tests/: CMakeLists.txt  test_grpc_server.cpp
